# claude-memory

./: .coverage  CLAUDE.md  CLAUDE.md.backup.20260126113924  README.md  pyproject.toml  start.sh
.dmm/: BOOT.md  daemon.config.json  policy.md
.dmm/agents/: code-reviewer.agent.yaml
.dmm/index/: conflicts.db  embeddings.db  embeddings.db-shm  embeddings.db-wal  knowledge.kuzu  review_queue.db  usage.db  usage.db-shm  usage.db-wal
.dmm/packs/: baseline_pack.json
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  MEMORY_FORMAT.md  PHASE3_COMPLETE.md  QUICKSTART.md  TROUBLESHOOTING.md  claudememory-architecture-1.txt  claudememory-architecture-2.txt  claudememory-initital-1.txt  claudememory-prd1.txt  claudememory-prd2.txt  claudememory-prd3.txt  claudememory-tasks.txt  index.md  rules-universal.txt
docs/api/: core.md  graph.md
docs/guides/: configuration.md  deployment.md  security.md
docs/tutorials/: 01-basic-memory.md  02-creating-agents.md  03-defining-skills.md
examples/: README.md
examples/agents/: __init__.py  code_review_agent.py  memory_curator_agent.py  research_assistant_agent.py  task_manager_agent.py
examples/skills/: code_analysis.yaml  memory_search.yaml  report_generation.yaml  task_planning.yaml
examples/workflows/: __init__.py  code_review_pipeline.py  research_task.py  system_maintenance.py
scripts/: install.sh  uninstall.sh  update.sh
src/dmm/: __init__.py
templates/: CLAUDE.md.template  mcp.json.template  start.md
tests/: conftest.py  test_claude_integration.sh  test_integration.py  test_models.py  test_performance.py
(+251 files in other folders)
